# aleph-community-node-tracker

./: .env.sample  .gitignore  README.md  data_examples.json  docker-compose.yml  tatus
app-api/: .env.sample  dockerfile  pyproject.toml
app-api/app/: main.py  response.json
app-api/app/config/: settings.py
app-api/app/db/: connection.py
app-api/app/db/migrations/: env.py
app-api/app/db/migrations/versions/: 2024_02_03_1655-a6f98144ea03_add_tables.py
app-api/app/models/: Notification.py  ccn_metric.py  crn_metric.py  message.py  node.py  subscriber.py  user_session.py
app-api/app/repositories/: message.py  node.py  subscribe.py  user_seasion.py
app-api/app/routers/: nodes_metrics.py  subscribe_node.py  telegram_bot.py  user_session.py
app-api/app/schemas/: ccn_metrics.py  crn_metrics.py  message.py  message_metrics.py  node.py  notification.py  subscriber.py  subscription.py  user_session.py
app-api/app/services/: nodes_metrics.py  subscribe.py  user_session.py
app-api/app/utils/: utils.py
app-frontend/: pyproject.toml
app-frontend/app/: main.py
app-frontend/app/schemas/: ccn_metrics.py  constants.py  crn_metrics.py  node.py  subscriber.py  user_session.py
app-frontend/app/ui/: display_nodes.py
