[tool.poetry]
name = "app-frontend"
version = "0.1.0"
description = ""
authors = ["Costa <jorgemdcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pip = "^23.3.2"
install = "^1.3.5"
streamlit-authenticator = "^0.3.1"
streamlit = "^1.30.0"
extra-streamlit-components = "^0.1.60"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
